--- a/AppleProject.Rmd
+++ b/AppleProject.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "How 'Bout 'Dem Apples: Has Modern Agriculture Reduced The Genetic Diversity of Apple Cultivars?"
-author: "\\vspace{-8truemm}Michael Jordan"
+author: "\\vspace{-4truemm}Michael Jordan"
 fontsize: 11pt
 header-includes: 
   \usepackage{geometry}
   \geometry{top=2.5cm,left=2.5cm,bottom=2.5cm,right=2.5cm}
+  \usepackage{titling}
+  \setlength{\droptitle}{-5em} 
 output: 
   pdf_document:
     latex_engine: xelatex
@@ -49,9 +51,9 @@ The domestic apple (*Malus domestica*) is one of the oldest, most commonly culti
 
 As *M. domestica* spread, trees with desirable traits were developed as cultivars through vegetative propagation (Volk et al., 2021). Asexual reproduction was necessary because apples are typically self-incompatible and highly heterozygous, meaning that cultivars must be cross-bred  and offspring will exhibit traits not expressed in either parent tree (Volk et al., 2021). Therefore, asexual reproduction was required to maintain desirable traits.
 
-Prior to the industrial era apple production was regional, with small farms choosing new cultivars to develop largely through trial and error or chance pollination events (O'Rourke, 2021). After industrialization the industry became increasingly structured, complex, and globally integrated as new technology allowed apples to be sold over greater distances, leading to large vertically integrated firms today (O'Rourke, 2021). As industry organization became more sophisticated, so to did apple breeding strategies. Controlled breeding programs were established by the early 1800s (Khan et al., 2021), during the 20th century the apple industry embraced genomics, and today it uses modern technologies like SNP arrays to develop cultivars (Volk et al., 2021).
+Prior to the industrial era apple production was regional, with small farms choosing new cultivars to develop largely through trial and error or chance pollination events (O'Rourke, 2021). After industrialization the industry became increasingly structured, complex, and globally integrated as new technology allowed apples to be sold over greater distances, leading to the large vertically integrated firms of today (O'Rourke, 2021). As industry organization became more sophisticated, so to did apple breeding strategies. Controlled breeding programs were established by the early 1800s (Khan et al., 2021), during the 20th century the apple industry embraced genomics, and today it uses modern technologies like SNP arrays to develop new cultivars (Volk et al., 2021).
 
-Although these structural and technological developments facilitated a large globally connected industry, this may have come at the cost of genetic diversity. Research has shown that many accessions in collections today are clonally related to just a few commercially dominant cultivars (Migicovsky et al., 2021). I hypothesize that this is a recent phenomenon, with apple cultivars becoming more related and less genetic diverse over time due to increased industry organization and the use of more sophisticated breeding techniques. If so, this would support the continued maintenance of heritage cultivars as an important reservoir of potentially valuable genotypes.
+Although these structural and technological developments facilitated a large globally connected industry, this may have come at the cost of genetic diversity. Research has shown that many accessions in collections today are clonally related to just a few commercially dominant cultivars (Migicovsky et al., 2021). I hypothesize that this is a recent phenomenon, with apple cultivars becoming more related and less genetically diverse over time due to industry consolidation and the use of more sophisticated breeding techniques. If so, this would support the continued maintenance of heritage cultivars as an important reservoir of potentially valuable genotypes.
 
 ## Methods
 
@@ -133,11 +135,11 @@ p3.log <- read.delim("./Data/Snps/p3_ibd.log")
 
 ```
 
-To evaluate my hypothesis, I used a [data set](https://datadryad.org/stash/dataset/doi:10.5061/dryad.zkh1893cd) of 278,231 SNPs from 1,175 accessions in Canada's Apple Biodiversity Collection (ABC) (Migicovsky et al., 2022). To described these accessions, I used a [data set](https://github.com/MylesLab/abc-phenomics) from a phenomic review of the ABC (Watts et al., 2022). Accessions were filtered using `r substring(R.Version()$version.string, 1, 15)` to include only *M. domestica* with either a cultivation or a release year (earliest was used). Because SNP data did not account for non-diploid cultivars, I also removed triploid accessions by using the het function in Plink v1.90 to calculate the fixation index and dropping accessions exhibiting abnormally high heterozygosity (see PloidismExploration.R). This resulted in `r nrow(apple.p.metadata)` remaining accessions, which I split into three time periods -- 1800-1899, 1900-1959, and 1960-Present -- reflecting stages in apple industry development.
+To evaluate my hypothesis, I used a [data set](https://datadryad.org/stash/dataset/doi:10.5061/dryad.zkh1893cd) of 278,231 SNPs from 1,175 accessions in Canada's Apple Biodiversity Collection (ABC) (Migicovsky et al., 2022). To described these accessions, I used a [data set](https://github.com/MylesLab/abc-phenomics) from a phenomic review of the ABC (Watts et al., 2022). Accessions were filtered using `r substring(R.Version()$version.string, 1, 15)` to include only *M. domestica* with either a cultivation or a release year (earliest was used). Because SNP data did not account for non-diploids, I dropped triploids by using the Plink het function to estimate heterozygosity and filtering out high values (see PloidismExploration.R). This resulted in `r nrow(apple.p.metadata)` remaining accessions, which I split into three time periods -- 1800-1899, 1900-1959, and 1960-Present -- reflecting stages in apple industry development.
 
 SNP quality control was conducted in Plink. SNPs were pruned for linkage disequilibrium (indep-pairwise 10 3 .05). SNPs with a minor allele frequency of less than .01 and a missingness of greater than .05 were removed. Accessions with greater than .1 missingness were removed. This resulted in `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPS and `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P1, `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P2, and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P3.
 
-To evaluate accession relatedness, I estimated identity by descent (IBD) using Plink. Accessions with a $\hat{\pi}$ (proportion of inheritance) greater than .125 (a 3rd degree relationships or closer) were considered related. Related accessions were visualized using the tidygraph and ggraph R packages with a Fruchterman-Reingold (FR) layout algorithm using $\hat{\pi}$ as a weight. To evaluate accession genetic diversity, I calculated the genetic hamming distance between accessions using Plink and conducted PCoA with the cmdscale function in R.
+To evaluate relatedness, I estimated identity by descent (IBD) using Plink. Accessions with a $\hat{\pi}$ (proportion of inheritance) greater than .125 (a 3rd degree relationships or closer) were considered related. Related accessions were visualized using the tidygraph and ggraph R packages with a Fruchterman-Reingold (FR) layout algorithm using $\hat{\pi}$ as a weight. To evaluate genetic diversity, I calculated the genetic hamming distance (i.e., the percentage of SNPs that differ) using Plink and conducted PCoA with the cmdscale function in R.
 
 ## Results
 ```{r import_ibd, echo=FALSE, error=FALSE, warning=FALSE, message=FALSE}
@@ -204,11 +206,11 @@ eigenvec <- dplyr::left_join(eigenvec, map2, by = join_by(IID == apple_id))
 eigen.perc <- round(((mds$eig) / sum(mds$eig)) * 100, 2)
 ```
 
-Per Figure 1a, cultivar relatedness increased in each period as the percentage of accessions with at least one 3rd degree or closer relationship increased from `r scales::percent(round(nrow(as_tibble(activate(p1.graph, nodes))) / nrow(p1.nodes), digits = 2))` in P1 to `r scales::percent(round(nrow(as_tibble(activate(p2.graph, nodes))) / nrow(p2.nodes), digits = 2))` in P2 to `r scales::percent(round(nrow(as_tibble(activate(p3.graph, nodes))) / nrow(p3.nodes), digits = 2))` in P3. The relatedness of accessions with at least one relationship also increased in each period. This can be seen visually in Figures 1b-d. The FR layout algorithm will place accessions that are more related closer together and increased node density is evident across periods. Extracting the global efficiency score -- which is inversely related to the distance between nodes -- of each graph confirms this. Global efficiency increased from `r scales::percent(round(igraph::global_efficiency(p1.graph), digits = 2))` in P1 to `r scales::percent(round(igraph::global_efficiency(p2.graph), digits = 2))` in P2 and to `r scales::percent(round(igraph::global_efficiency(p3.graph), digits = 2))` in P3, indicating shorter distances between nodes. Figures 1b-d also show networks becoming more connected over time. Average node degree increased from `r round(mean(degree(p1.graph)), digits = 1)` in P1 to `r round(mean(degree(p2.graph)), digits = 1)` in P2 and `r round(mean(degree(p3.graph)), digits = 1)` in P3.
+Per Figure 1a, the percentage of accessions with at least one 3rd degree or closer relationship increased from `r scales::percent(round(nrow(as_tibble(activate(p1.graph, nodes))) / nrow(p1.nodes), digits = 2))` in P1 to `r scales::percent(round(nrow(as_tibble(activate(p2.graph, nodes))) / nrow(p2.nodes), digits = 2))` in P2 and to `r scales::percent(round(nrow(as_tibble(activate(p3.graph, nodes))) / nrow(p3.nodes), digits = 2))` in P3. The relatedness of accessions with at least one relationship also increased. This can be seen visually in Figures 1b-d. The FR algorithm will place more related accessions closer together and increased node density is evident across periods. Extracting global efficiency scores -- which are inversely related to the distance between nodes -- confirms this. Global efficiency increased from `r scales::percent(round(igraph::global_efficiency(p1.graph), digits = 2))` in P1 to `r scales::percent(round(igraph::global_efficiency(p2.graph), digits = 2))` in P2 and to `r scales::percent(round(igraph::global_efficiency(p3.graph), digits = 2))` in P3, indicating shorter distances between nodes. Figures 1b-d also exhibit higher connectivity over time. Average node degree increased from `r round(mean(degree(p1.graph)), digits = 1)` in P1 to `r round(mean(degree(p2.graph)), digits = 1)` in P2 and to `r round(mean(degree(p3.graph)), digits = 1)` in P3.
 
-However, despite relatedness increasing over time, a PCoA of the genetic distance between cultivars did not show any loss in genetic diversity. we can also see in Figure 1 that the first two principle components of the genetic distance PCoA did not suggest any difference in the genetic diversity of accessions between periods. This can be concluded because accessions from all periods occupy contiguous graph space.
+In contrast, genetic diversity did not decrease. Per Figure 1e, a PCoA of genetic hamming distance shows no notable difference across periods. In this PCoA, accessions with a similar genetic distance will be grouped closer together. The graph clearly shows that accessions in all three periods occupy a roughly contiguous area of graph space, with no changes in density or different groupings evident across periods.
 
-``` {r graph_networks, echo=FALSE, fig.align="center", fig.height=3, fig.cap="(a) Bar plot of accessions with 0 and >= 1 relationship by period, (b-d) Network graphs of related accessions for each period, (e) PCoA of Cultivar Genetic Distance.", error=FALSE, warning=FALSE, message=FALSE}
+``` {r graph_networks, echo=FALSE, fig.align="center", fig.height=3, fig.cap="(a) Bar plot of accessions with 0 and >= 1 relationship by period, (b-d) Network graphs of related accessions for each period, (e) PCoA of genetic distance.", error=FALSE, warning=FALSE, message=FALSE}
 
 # Create plots for IBD networks
 p1.plot <- ggraph::ggraph(p1.graph, layout = "fr", weights = weight) + 
@@ -279,7 +281,7 @@ related.counts <- related.counts %>%
   mutate(label_y = cumsum(Accessions))
 bar1.plot <- ggplot2::ggplot(
   related.counts, aes(fill = Related, y = Accessions, x = Period)) +
-  ggplot2::ggtitle("Relatedness") +
+  ggplot2::ggtitle("Relationships") +
   ggplot2::geom_bar(position="stack", stat="identity") +
   ggplot2::geom_text(
     aes(y = label_y, label = Accessions),
@@ -306,8 +308,8 @@ p4.plot <- ggplot2::ggplot(data = eigenvec[!is.na(eigenvec$Period), ]) +
   ggplot2::geom_vline(xintercept = 0, linetype = "dotted") +
   ggplot2::labs(
     title = "PCoA of apple cultivar SNPs",
-    x = paste0("Principle Component 1 (", eigen.perc[1], " %)"),
-    y = paste0("Principle Component 2 (", eigen.perc[2], " %)")) +
+    x = paste0("PCoA Axis 1 (", eigen.perc[1], " %)"),
+    y = paste0("PCoA Axis 2 (", eigen.perc[2], " %)")) +
   ggplot2::theme(legend.position = "top")
 
 # Create cowplot grid for IBD networks
@@ -336,13 +338,9 @@ cowplot::plot_grid(
 
 ## Discussion
 
-It's worth mentioning three caveats to this analysis. First, the accessions used in this study are not a random sample of cultivars developed across the different time periods, but instead represent cultivars that happened to be preserved and pass my filters. If preservation and filtering was non-random, then this analysis will be a biased measure of true cultivar relatedness and diversity across periods  (and in fact the ABC is biased toward cultivars from Canada and the US).
+There are several caveats to this analysis. First, the time periods used were defined semi-arbitrarily. Ideally I would have defined time periods based on precisely when new breeding strategies were applied, but this information did not arise in my literature review. Second, my data set was not comprised of a random sample of cultivars from each period but instead of cultivars that happened to be preserved in the ABC. If preservation was non-random, then my results may be a biased measure of relatedness and diversity (in fact the ABC does have a geographic bias toward Canada and the US). Third, Plink's estimation of IBD is imperfect. Researchers have compared Plink to other methods and found significant differences (Stevens et al., 2011). That said, spot checking confirms that Plink's results are reasonable. For example, Plink identified [Sir Prize](https://pomiferous.com/applebyname/co-op-5-id-1464) and [Clear Gold](https://pomiferous.com/applebyname/clearwater-gold-id-1373) as having a $\hat{\pi}$ of `r scales::percent(round(p3.ibd[p3.ibd$Cultivar1 == "Sir Prize" & p3.ibd$Cultivar2 == "Clear Gold", ]$PI_HAT, digits = 2))` indicating a 1st degree relationship. This makes sense, since Clear Gold is a mutation of a Golden Delicious and Sir Prize is a cross between Golden Delicious and another cultivar. Finally, excluding triploid cultivars does limit the scope of these findings, since many commercially successful cultivars are triploid.
 
-Second, I picked time periods semi-arbitrarily. It would have been preferable to develop a more detailed understanding of exactly when the apple industry developed new breeding techniques and use that information to define period boundaries. But, this information did not arise in my reading of the literature.
-
-Finally, Plink's estimation of IBD is imperfect. When researchers have compared Plink to other IBD methods, they have found some significant differences (Stevens et al., 2011). That said, there was also significant consistency and I was able to confirm that Plink's IBD results were reasonable by comparing them to known relationships. For example, Plink identified [Sir Prize](https://pomiferous.com/applebyname/co-op-5-id-1464) and [Clear Gold](https://pomiferous.com/applebyname/clearwater-gold-id-1373) as having a $\hat{\pi}$ of `r scales::percent(round(p3.ibd[p3.ibd$Cultivar1 == "Sir Prize" & p3.ibd$Cultivar2 == "Clear Gold", ]$PI_HAT, digits = 2))` indicating a 1st degree relationship. This makes sense, since Clear Gold is a mutation of a Golden Delicious and Sir Prize is a cross between Golden Delicious and another cultivar.
-
-Caveats aside, I think these results are cause for both caution and peace of mind regarding apple cultivar genetic diversity. On the one hand, newly developed cultivars did become more related to each other over time, supporting the idea that the industry may be increasingly relying on a small number of cultivars to develop new apples whereas in the past it may have used a wider variety. On the other hand, a PCoA of genetic distance between cultivars did not show any corresponding loss in genetic diversity over time. My read of these two seemingly disparate results is that the extremely high heterozygosity of apples may have prevented a genetic bottleneck up to now despite the increasing relatedness of new cultivars.
+Caveats aside, I think these results are cause for both concern and some peace of mind regarding apple cultivar genetic diversity. On the one hand, newly developed apple cultivars are becoming increasingly related to each other over time as indicated by an increase in both the proportion of cultivars with at least one third degree relationship or closer and an increase in the $\hat{\pi}$ of such cultivars. On the other hand, genetic diversity as measured by the genetic hamming distance between cultivars does not seem to have changed over time. My speculative explanation of these two seemingly disparate results is that the high heterozygosity of apples may have prevented a genetic bottleneck up to now despite the increasing relatedness of new cultivars. However, it's worth observing that the hamming distance of SNPs just measures the percentage of overall difference between accessions. Not all of these differences will be coding or pertain to commercially relevant phenotypes. I may have reached a different conclusion if I had focused only on SNPs that code for relevant traits. 
 
 ## Conclusion
 
@@ -368,7 +366,7 @@ plot(cowplot::get_legend(dummy.plot))
 dev.off()
 ```
 
-While it is comforting to know that we are not at a stage of apple domestication where breeding has significantly constrained genetic diversity, I would still advocate for continued preservation of heritage apple cultivars on two bases. First, although the increased reliance on a small number of cultivars for breeding new apples has not yet significantly constrained apple genetic diversity, it may in the future and in the case that it does having heritage cultivars available to use for selecting new traits will be important. Second, heritage cultivars represent a window into what phenotypes people found valuable in the past, which is interesting historically and is in a sense a type of cultural heritage that in my opinion is worth preserving.
+While it is comforting to know that we are not at a stage of apple domestication where breeding has significantly constrained genetic diversity, I would still advocate for continued preservation of heritage apple cultivars. Although modern breeding strategies have not yet significantly constrained apple genetic diversity, they may in the future and in that case being able to select for new traits from heritage cultivars will be important. Also, I'd argue that heritage cultivars represent a window into what phenotypes people found valuable in the past, which is in a sense a type of cultural heritage that in my opinion is worth preserving.
 
 ## Reference List
 
@@ -385,8 +383,18 @@ Stevens, E.L.,Heckenberg, G., Roberson, E.D.O., Baugher, J.D., Downey, T.J., & P
 Volk, G., Cornille, A., Durel, C., & Gutierrez, B. (2021) 
 [Botany, Taxonomy, and Origins of the Apple](https://link-springer-com.iclibezp1.cc.ic.ac.uk/chapter/10.1007/978-3-030-74682-7_2). In: Podwyszyńska, M., & Marasek-Ciołakowska, A. (eds.) (2021) *The Apple Genome*. Springer Cham, pp. 19-32.
 
-Watts, S., Migicovsky, Z., & Myles, S. (2023) [Large-scale apple GWAS reveals NAC18.1 as a master regulator of ripening traits](https://doi.org/10.48130/FruRes-2023-0032). *Fruit Research*. 3.
+Watts, S., Migicovsky, Z., McClure, K., Yu, C., Amyotte, B., Baker, T., Bowlby, D., Burgher, K., Butler, L., Donald, R., Fan, L., Fillmore, S., Flewelling, J., Gardner, K., Hodges, M., Hughes, T., Jagadeesan, V., Lewis, N., MacDonell, E., MacVicar, L., McElroy, M., Money, D., et al. (2021) [Quantifying apple diversity: A phenomic characterization of Canada’s Apple Biodiversity Collection](https://doi.org/10.1002/ppp3.10211). *Plants People Planet*. 3 (6), 747-760.
 
 \newpage
 ## Working Style Assessment
+
+I enjoyed working on this mini project quite a bit. Overall it confirmed a lot of what I know about the pros and cons of my working style.
+
+On the pro side, I found it deeply satisfying to learn about so many different subjects, whether that was a specific research topic like apples, a broad field like genomics, or technical details like genomic analysis software or ordination. Far from being a chore, each time my analysis hit a snag and I needed to learn about a new subject, I was excited to tackle that challenge. I was also able to pivot effectively and make judicious decisions about when to cut my losses rather than keep investing time in a losing approach. For example, after developing some background in apples as a subject area and finding the SNP data, my initial plan was to use it to conduct a Genome Wide Association Study. However, by the end of a full day of work I had run into a lot of technical and interpretive snags that I was worried I wouldn't be able to solve in the limited time available to me. Although I was very frustrated, I had the presence of mind to not push my luck and work down to the wire hoping to resolve these issues. I also didn't throw away all of the background I had developed. Instead, I pivoted to conducting an analysis that still relied on SNP data and still answered an interesting question, but used simpler functions and relied on more easily interpreted approaches. This good decision allowed me to complete the bulk of the work by the end of the first week and spend the next week polishing my draft up and writing the presentation.
+
+On the con side, I did at times exhibit downsides of the curiosity I have for the subjects I was learning: analysis paralysis and chasing after shiny objects. I'm well acquainted with both dynamics from my years working in analytical roles in tech and I and pretty much any other analyst will occasionally be caught up in them. Analysis paralysis describes a situation in which the analyst continues to assess a problem from different angles far past the point of diminishing returns when it would be preferable to simply pick an approach and move on. Chasing after shiny objects involves an analyst getting excited by some interesting, but ultimately inconsequential piece of information or technique. Overall I didn't get too sunk into either, but certainly there were moments when I found myself doing one or the other (e.g., I caught myself reading a textbook on Network Analysis chapter-by-chapter when really all that was necessary and practicable given the scope of this project and the time limit was skimming for relevant content). In my experience, this kind of thing usually happens when someone is a bit stressed or tired and the best solution is to simply close your laptop and take a walk.
+
+This leaves me feeling ready to tackle my full research project. Certainly making good decisions about time usage and being willing and able to pivot if I hit snags will come in handy in the full research project. Overall I'm really enjoying putting together the technical and subject area expertise I've developed so far in the program and applying them interesting problems. I think I'm going into it with the right attitude and the skills to succeed.
+
+
 
